--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "name": "Slackin",
   "description": "Let people invite themselves to your Slack",
   "logo": "https://i.imgur.com/odDO1Fx.png",
-  "repository": "https://github.com/rauchg/slackin",
+  "repository": "https://github.com/echovue/slackin",
   "keywords": ["node", "slack"],
   "env": {
     "SLACK_SUBDOMAIN": {
@@ -28,6 +28,10 @@
     "SLACK_CHANNELS": {
       "description": "Comma-separated list of single guest channels to invite them to (leave blank for a normal, all-channel invite). In order to make this work, you have to have a paid account. You'll only be able to invite as many people as your number of paying members times 5.",
       "required": false
+    },
+    "ADMIN_EMAIL": {
+      "description": "The email address for the membership approval process.",
+      "required": true
     }
   }
 }
